# landing-page

./: .env  .env.docker  Cargo.toml  Dockerfile  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2023-04-08-041304_create_visits_table/: up.sql
migrations/2023-04-08-142031_create_waitlist_table/: down.sql  up.sql
migrations/2023-04-08-195256_create_survey_table/: down.sql  up.sql
src/: lib.rs  main.rs
src/data/: database.rs
src/models/: mod.rs  schema.rs  surveys.rs  visits.rs  waitlists.rs
src/services/: mod.rs  survey_service.rs  visit_service.rs  waitlist_service.rs
tests/: integration.rs  survey_integration_test.rs  visit_integration_test.rs  waitlist_integration_test.rs
