[package]
name = "llm_landing_page"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "llm_landing_page"
path = "src/main.rs"

[lib]
name = "llm_landing_page"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="4.0"}
spider = {version = "1.26"}
env_logger = {version = "0.10"}
log = {version = "0.4"}
walkdir = "2.3.3"
diesel = {version = "2.0.3", features = ["postgres", "r2d2", "uuid", "chrono"]}
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"]}
uuid = { version = "1.3.0", features = ["serde", "v4"] }
serde_json = "1.0.95"
r2d2 = "0.8.10"
diesel_migrations = {version = "2.0.0"}
